# AvatarAPI

./: .gitmodules  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
avatarapi/: app.py  helpers.py  main.py  models.py  schemas.py
submodules/AvatarQuotes/: .gitignore  Quotes.csv  README.md
submodules/AvatarQuotes/.github/workflows/: test.yml
submodules/AvatarQuotes/books/01_Water/: 01_The_Boy_in_the_Iceberg.csv  02_The_Avatar_Returns.csv  03_The_Southern_Air_Temple.csv  04_The_Warriors_of_Kyoshi.csv  05_The_King_of_Omashu.csv  06_Imprisoned.csv  07_Winter_Solstice_Part_1_The_Spirit_World.csv  08_Winter_Solstice_Part_2_Avatar_Roku.csv  09_The_Waterbending_Scroll.csv  10_Jet.csv  11_The_Great_Divide.csv  12_The_Storm.csv  13_The_Blue_Spirit.csv  14_The_Fortuneteller.csv  15_Bato_of_the_Water_Tribe.csv  16_The_Deserter.csv  17_The_Northern_Air_Temple.csv  18_The_Waterbending_Master.csv  19_The_Siege_of_the_North_Part_1.csv  20_The_Siege_of_the_North_Part_2.csv
submodules/AvatarQuotes/books/02_Earth/: 01_The_Avatar_State.csv  02_The_Cave_of_Two_Lovers.csv  03_Return_to_Omashu.csv  04_The_Swamp.csv  05_Avatar_Day.csv  06_The_Blind_Bandit.csv  07_Zuko_Alone.csv  08_The_Chase.csv  09_Bitter_Work.csv  10_The_Library.csv  11_The_Desert.csv  12_The_Serpents_Pass.csv  13_The_Drill.csv  14_City_of_Walls_and_Secrets.csv  15_The_Tales_of_Ba_Sing_Se.csv  16_Appas_Lost_Days.csv  17_Lake_Laogai.csv  18_The_Earth_King.csv  19_The_Guru.csv  20_The_Crossroads_of_Destiny.csv
submodules/AvatarQuotes/books/03_Fire/: 01_The_Awakening.csv  02_The_Headband.csv  05_The_Beach.csv  (+18 more)
submodules/AvatarQuotes/tests/: helpers.py  test_dataset.py
tests/: test_response_codes.py  test_return_data.py
