[tool.poetry]
name = "avatarapi"
version = "0.1.0"
description = "An API for quotes from Avatar: The Last Airbender"
authors = ["dotzenith"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
fastapi = "^0.85.0"
pandas = "^1.5.1"
slowapi = "^0.1.6"
requests = "^2.28.1"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
