[tool.poetry]
name = "avatarapi"
version = "0.2.2"
description = "An API for quotes from Avatar: The Last Airbender"
authors = ["dotzenith"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.89.1"
slowapi = "^0.1.7"
requests = "^2.28.2"
pydantic = "^1.10.4"
polars = "^0.15.16"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
